# How-Agent

./: .gitignore  README.md  mkdocs.yml  智能体构建极简教程.docx
minimal_agents/: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt  智能体构建极简教程.md
minimal_agents/examples/: glm47_smoke.py  tutorial_examples.md
minimal_agents/examples/chapter-2/prompt/: teaching_prompt_demo.py
minimal_agents/examples/chapter-3/skill/: teaching_skills_demo.py
minimal_agents/examples/chapter-3/tool/: teaching_tools_demo.py  teaching_weather_tool.py
minimal_agents/examples/chapter-4/mcp/: teaching_mcp_demo.py  teaching_stdio_weather_server.py  teaching_weather_tools.py
minimal_agents/examples/chapter-5/agent/: README.md  _bootstrap.py  teaching_full_capabilities_demo.py  teaching_minimal_demo.py  teaching_plan_execute_demo.py  teaching_react_demo.py
minimal_agents/examples/chapter-5/langgraph/: README.md  sample_student_task.md  teaching_langgraph_demo.py
minimal_agents/examples/chapter-6/mobile/: README.md
minimal_agents/examples/chapter-7/gateway/: gateway_sample_note.md  teaching_gateway_demo.py  teaching_gateway_tools.py
minimal_agents/examples/chapter-8/memory/: README.md
minimal_agents/examples/chapter-9/dify/: README.md  出题小助手.yml  高级知识检索.yml
minimal_agents/hw/chapter-2/prompt/: README.md  reflexion.py  (+3 more)
minimal_agents/src/minimal_agents/: __init__.py
minimal_agents/tests/: __init__.py  test_teaching_full_capabilities_demo.py  test_teaching_gateway_demo.py  test_teaching_react_agent.py  test_teaching_skills_loader.py  test_teaching_tools_registry.py
(+117 files in other folders)
